syntax = "proto3";

service FleetController {
    rpc Book (BookingRequest) returns (BookingResponse) {}
    rpc Unbook (UnbookingRequest) returns (UnbookingResponse) {}
    rpc BeginRide (BeginRideRequest) returns (BeginRideResponse) {}
    rpc EndRide (EndRideRequest) returns (EndRideResponse) {}
    rpc RetrieveReservations (Empty) returns (RetrieveReservationsResponse) {}
    rpc RetrieveUnbilledBookings (Empty) returns (RetrieveUnbilledBookingsResponse) {}
    rpc AddInvoiceToBooking (AddInvoiceToBookingRequest) returns (AddInvoiceToBookingResponse) {}
}

message Empty{}

message BookingRequest {
    string VehicleId = 1;
    string CustomerId = 2;
}

message BookingResponse {
    bool Successful = 1;
    uint32 ReservedTime = 2;
    string Error = 3;
}

message UnbookingRequest {
    string VehicleId = 1;
    string CustomerId = 2;
}

message UnbookingResponse {
    bool Successful = 1;
    string Error = 2;
}

message BeginRideRequest {
    string CustomerId = 2;
}

message BeginRideResponse {
    bool Successful = 1;
    string Error = 2;
}

message EndRideRequest {
    string CustomerId = 2;
}

message EndRideResponse {
    bool Successful = 1;
    string Error = 2;
}

message RetrieveReservationsResponse {
    message Reservation {
        uint32 Id = 1;
        int64 CreatedAt = 2;
        string Vehicle = 3;
        string Customer = 4;
        uint32 Status = 5;
    }
    repeated Reservation reservations = 1;
    string Error = 2;
}

message RetrieveUnbilledBookingsResponse {
    message Booking {
        uint32 Id = 1;
        int64 CreatedAt = 2;
        string Customer = 3;
        uint32 DistanceDriven = 4;
        uint32 TimeDriven = 5;
    }
    repeated Booking bookings = 1;
}

message AddInvoiceToBookingRequest {
    uint32 BookingId = 1;
    string InvoiceId = 2;
}

message AddInvoiceToBookingResponse {
    bool Successful = 1;
}
